[package]
name = "rust-computer-graphics-from-scratch"
version = "0.1.0"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2018"
license = "0BSD"

[lib]
crate-type = ["lib"]

[dependencies]
minifb = "0.19.3"

[[example]]
name = "raytracer_triangle"
path = "examples/raytracer_triangle.rs"
test = true
