[package]
name = "rust-computer-graphics-from-scratch"
version = "0.1.0"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2018"
license = "Unlicense"

[lib]
crate-type = ["lib"]

[dependencies]
jpeg-decoder = "0.1.22"
minifb = "0.19.3"
num_cpus = "1.13"


[[example]]
name = "raytracer_triangle"
path = "examples/raytracer_triangle.rs"
test = true
