[package]
name = "rust-computer-graphics-from-scratch"
version = "0.1.1"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2018"
license = "Unlicense"

[lib]
crate-type = ["lib"]

[dependencies]
jpeg-decoder = "0.3"
minifb = "0.25"
num_cpus = "1.16"


[[example]]
name = "raytracer_triangle"
path = "examples/raytracer_triangle.rs"
test = true
