[package]
name = "delete_me"
version = "0.1.0"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2018"

[dependencies]
minifb = "0.19.3"
rust-computer-graphics-from-scratch = { path = "../../rust-computer-graphics-from-scratch" }

# TODO Cannot get this to work
#[dev-dependencies]
#assert_approx_eq = "1.1.0"
